<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/reg_back_img"
        android:layout_width="@dimen/navi_top_layout_height"
        android:layout_height="@dimen/navi_top_layout_height"
        android:layout_alignParentLeft="true"
        android:scaleType="centerInside"
        android:src="@mipmap/navi_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:duplicateParentState="true"
        android:text="@string/reg_title_txt"
        android:textColor="@color/lightwhite"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/reg_mobile_hint_tv"
        style="@style/default_text_view_style"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_10"
        android:duplicateParentState="true"
        android:gravity="center"
        android:text="输入+810120181收到的4位验证码"
        android:textColor="@color/lightwhite"
        android:textSize="@dimen/font18_txt_size" />

    <EditText
        android:id="@+id/reg_valid_code_et"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/reg_valid_code_placeholder_txt"
        android:inputType="number"
        android:padding="@dimen/common_5"
        android:textColor="@color/lightwhite"
        android:textColorHint="@color/lightgray"
        android:textCursorDrawable="@drawable/login_edittext_color_cursor"
        android:textSize="@dimen/font20_txt_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/common_5"
        android:layout_marginLeft="@dimen/common_40"
        android:layout_marginRight="@dimen/common_40"
        android:layout_marginTop="@dimen/common_5"
        android:background="@color/light_gray" />

    <EditText
        android:id="@+id/reg_password_et"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/reg_password_placeholder_txt"
        android:inputType="textPassword"
        android:padding="@dimen/common_5"
        android:textColor="@color/lightwhite"
        android:textColorHint="@color/lightgray"
        android:textCursorDrawable="@drawable/login_edittext_color_cursor"
        android:textSize="@dimen/font20_txt_size" />


    <LinearLayout
        android:id="@+id/reg_valid_resend_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/common_20"
        android:gravity="center_vertical">

        <TextView
            style="@style/default_text_view_style"
            android:duplicateParentState="true"
            android:gravity="center"
            android:tag="10"
            android:text="@string/reg_valid_code_hint_left_txt"
            android:textColor="@color/lightwhite"
            android:textSize="@dimen/font14_txt_size" />

        <TextView

            style="@style/default_text_view_style"
            android:duplicateParentState="true"
            android:gravity="center"
            android:padding="3dp"
            android:tag="11"
            android:text="@string/reg_valid_code_hint_right_txt"
            android:textColor="@color/purple_red_color"
            android:textSize="@dimen/font14_txt_size" />
    </LinearLayout>

    <ImageView
        android:id="@+id/reg_next_step_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:src="@mipmap/next_step_arrow_grey" />

</LinearLayout>
