<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profile_skip_tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/navi_top_layout_height"
        android:layout_gravity="right"
        android:duplicateParentState="true"
        android:gravity="center"
        android:padding="@dimen/common_8"
        android:text="@string/skip_txt"
        android:textColor="@color/lightwhite"
        android:textSize="@dimen/font16_txt_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:duplicateParentState="true"
        android:text="@string/profile_complete_title_txt"
        android:textColor="@color/lightwhite"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_20"
        android:background="@color/dark_gray"
        android:orientation="vertical">

        <EditText
            android:id="@+id/profile_nickname_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/common_10"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/profile_nickname_txt"
            android:padding="@dimen/common_8"
            android:textColor="@color/lightwhite"
            android:textColorHint="@color/lightgray"
            android:textCursorDrawable="@drawable/login_edittext_color_cursor"
            android:textSize="@dimen/font20_txt_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/common_5"
            android:layout_marginLeft="@dimen/common_40"
            android:layout_marginRight="@dimen/common_40"
            android:layout_marginTop="@dimen/common_5"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/profile_birthday_tv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/profile_select_birthday_txt"
            android:padding="@dimen/common_8"
            android:textColor="@color/lightwhite"
            android:textColorHint="@color/lightgray"
            android:textCursorDrawable="@drawable/login_edittext_color_cursor"
            android:textSize="@dimen/font20_txt_size" />

    </LinearLayout>

    <ImageView
        android:id="@+id/profile_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:src="@mipmap/next_step_arrow_grey" />

</LinearLayout>
